apps/testapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
  namespace: apps
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
        - name: app
          image: ghcr.io/observixprd/observix-test-app:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
