apps/testapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
  namespace: apps
spec:
  selector:
    app: testapp
  ports:
    - name: http
      port: 80
      targetPort: 3000
