apps/testapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - testapp.observix.top
      secretName: testapp-tls
  rules:
    - host: testapp.observix.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapp
                port:
                  number: 80
